<resources>
    <string name="app_name">GroupUp</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="descriptionPlace">Description : </string>
    <string name="detail_customer">Detail_customer</string>
    <string name="signout">Signout</string>
    <string name="account">Manage Account</string>
    <string name="addImg">+ Add Picture</string>
    <string name="name">Name</string>
    <string name="name_title">Name : </string>
    <string name="email">Email</string>
    <string name="email_title">Email : </string>
    <string name="colon">:</string>
    <string name="status">Status : Create Appointment</string>
    <string name="statusEvent">Status : </string>
    <string name="btn">Confirm</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="addFriends">Add Friends</string>
    <string name="search_friends">Search with Email</string>
    <string name="search">Search</string>
    <string name="search_theme">Search Theme</string>
    <string name="type_friends">Friends type</string>
    <string name="title_activity_invite_friends">Invite Friends</string>
    <string name="invitations">Invitations</string>
    <string name="tab_text_1">Head</string>
    <string name="tab_text_2">Attendant</string>
    <string name="home">Home</string>
    <string name="manage_friend">Manage Friend</string>
    <string name="manage_calendar">Manage calendar</string>
    <string name="facility">Facility : </string>
    <string name="parking">Parking</string>
    <string name="wifi">Wi-Fi</string>
    <string name="credit">Credit Card</string>
    <string name="kids">Good for Kids</string>
    <string name="air">Air conditioning</string>
    <string name="room">Private Room</string>
    <string name="bts">Near BTS</string>
    <string name="mrt">Near MRT</string>
    <string name="nameFriends">Name Friends</string>
    <string name="newGroup">New Meet</string>
    <string name="title">Title</string>
    <string name="titleEvent">Title Event : </string>
    <string name="note">Note</string>
    <string name="stMonth">Appointment Start Month</string>
    <string name="endMonth">Appointment End Month</string>
    <string name="select_friend">Select Friend</string>
    <string name="waitTime">Wait Time Vote</string>
    <string name="day">Day</string>
    <string name="Appointment_period">Appointment period</string>
    <string name="newPlace">New Place</string>
    <string name="details">Details</string>
    <string name="priceRange">Price range</string>
    <string name="bath">Bath</string>
    <string name="phone">Phone</string>
    <string name="select_theme">Select Theme</string>
    <string name="numberOfSeats">Number of seats</string>
    <string name="seats">seats</string>
    <string name="deposite">Deposite</string>
    <string name="myPlace">My Place</string>
    <string name="import_calendar">import calendar event</string>
    <string name="err_title">error</string>
    <string name="err_input_name">please input name</string>
    <string name="err_input_email">please input email</string>
    <string name="err_input_id">please input id</string>
    <string name="submit_title">save result</string>
    <string name="submit_result">Save complete</string>
    <string name="theme">Theme</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="coffee_tea">Coffee/Tea Shop</string>
    <string name="cafe">Cafe</string>
    <string name="riverside">Riverside</string>
    <string name="karaoke">Karaoke</string>
    <string name="clubs">Clubs</string>
    <string name="wine_Bar">Wine Bar</string>
    <string name="pub">Pub</string>
    <string name="late_night_rice">Late Night Rice Porridge</string>
    <string name="vegeterian">Vegeterian</string>
    <string name="hotel_buffet">Hotel Buffet</string>
    <string name="rooftop">Rooftop</string>
    <string name="izakaya">Izakaya</string>
    <string name="food_type">Food Type</string>
    <string name="alacarte">A La Carte</string>
    <string name="dessert">Dessert</string>
    <string name="seafood">Seafood</string>
    <string name="steak">Steak House</string>
    <string name="iceCream">Ice Cream</string>
    <string name="bakery_cake">Bakery/Cake</string>
    <string name="bbq">Grill/BBQ</string>
    <string name="shabu">Shabu/Sukiyaki</string>
    <string name="buffet">Buffet</string>
    <string name="cleanFood">Clean Food/Salad</string>
    <string name="thai_bbq">Thai BBQ</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="burger">Burger</string>
    <string name="ramen">Ramen</string>
    <string name="dimsum">Dim Sum</string>
    <string name="vegan">Vegan</string>
    <string name="atmosphere_type">Atmosphere Type</string>
    <string name="original">Original</string>
    <string name="bar">Bar</string>
    <string name="outdoor">OutDoor</string>
    <string name="cozy">Cozy</string>
    <string name="family">Family</string>
    <string name="minimal">Minimal</string>
    <string name="warm">Warm</string>
    <string name="child">Child</string>
    <string name="appointment">Appointment</string>
    <string name="to">To</string>
    <string name="date_time">Appointment date and time</string>
    <string name="select_date_time">Select Date And Time</string>
    <string name="place">Appointment place</string>
    <string name="select_place">Select Place</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="setItem">Set Item</string>
    <string name="manageHead">Manage Head</string>
    <string name="qrCode">QR Code</string>
    <string name="alert">Alert</string>
    <string name="create_friend_types">Create Friend Types</string>
    <string name="custom">Custom</string>
    <string name="vote_date_time">Vote date and time</string>
    <string name="vote_place">Vote place</string>
    <string name="job_summary">Job summary</string>
    <string name="qrCode_attend_the_event">QR Code Attend The Event</string>
    <string name="select">Select</string>
    <string name="namePlace">Name Place : </string>
    <string name="rating">Rating : </string>
    <string name="review_details">Review Details : </string>
    <string name="group_theme">Group</string>
    <string name="btn_cancle">cancle</string>
    <string name="slipCheck">Slip Check</string>
    <string name="classic">Classic</string>
    <string name="forkids">For Kids</string>
    <string name="waterFront">Waterfront</string>
    <string name="sky">rooftop</string>
    <string name="time_morning">11:00 - 13:59</string>
    <string name="time_late">14:00 - 16:59</string>
    <string name="time_afternoon">17:00 - 19:59</string>
    <string name="time_evening">20:00 - 23:59</string>
    <string name="time_allday">   all day   </string>
    <string name="send_notification">Send Notification</string>
    <string name="verification">Verification</string>
    <string name="choice">Choice : (Please select 3 Choice)</string>
    <string name="filter">Filter : </string>
    <string name="default_notification_channel_name">Channel ID</string>
    <string name="fcm_message">fcm_message</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribe_failed">Subscribe To failed</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="voteOff">Vote Off</string>
    <string name="voteOn">Finish</string>
    <string name="getCalen">Get Calendar</string>
    <string name="delCalen">Delete Calendar All</string>
    <string name="addtype">Add Type Friend</string>
    <string name="dia_nametype">name type</string>
    <string name="err_nametype">plese input name type</string>
    <string name="del">delete friend \n in type</string>
    <string name="delAll">delete friend \n all type</string>
    <string name="noteEvent">Note Event</string>
    <string name="sent">sent</string>
    <string name="type_friend">Type Friend : </string>
    <string name="dateApp">Appointment Date : </string>
    <string name="timeApp">Appointment Time : </string>
    <string name="placeApp">Appointment Place : </string>
    <string name="gotoEvent">Number Of People go to Event : </string>
    <string name="numberOfPeople">People</string>
    <string name="uploadSlip">Transfer</string>
    <string name="payment">Cash</string>
    <string name="join">Join</string>
    <string name="notJoin">Do Not Join</string>
    <string name="after">After</string>
    <string name="upload">Upload</string>
    <string name="detailColon">Details : </string>
    <string name="inviter">Inviter : </string>
    <string name="timeColon">Time : </string>
    <string name="time">Time</string>
    <string name="statusInvite">Status Invite : </string>
    <string name="later">Later</string>
    <string name="save">Save</string>
    <string name="random">Random</string>
    <string name="con_vote">Confirm Vote</string>
    <string name="see_detail">See detail Vote</string>
    <string name="review">Review</string>
    <string name="score_review">Score View</string>
    <string name="search_place">Search Name/Facility/Score Review</string>
    <string name="bankAccountNo">Bank Account No.</string>
    <string name="bankName">Bank Name</string>
    <string name="accountName">Account Name</string>
    <string name="extra_detail">More Information</string>
    <string name="maxPeople">Number of seats</string>
    <string name="listFriend">Friend in event</string>
    <string name="friendEvent">member in event</string>
    <string name="see_friendEvent">see member</string>
    <string name="see_review">see review</string>
    <string name="optionPayment">Payment</string>
    <string name="moneyPay">Price: </string>
    <string name="optionPay">OptionPay :</string>
    <string name="approve">accept</string>
    <string name="unapprove">eject</string>
    <string name="priceperpeople">price per people :</string>
    <string name="set_money">Set price</string>
</resources>
