<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/classicBlue"
                android:text="@string/later"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/unapprove"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_cofirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/approve"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>